@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST mpdcron-0.3.tar.bz2 315412 RMD160 e2c4487ec6032fa7b50e4ffe7e03ff678f4e50e3 SHA1 05aea3bdec0c326ebd3cf9a7372d628c8727b66a SHA256 0d3ee40364f4748a18079277570f4e361928ff6216ad2450a49625f2dc954c5a
-EBUILD mpdcron-0.3.ebuild 1741 RMD160 d42488c8bb113ebdda614dfa8f5803da6ae319d0 SHA1 ea15643cb7d8847daa717f93c11e590fe4f5f4f2 SHA256 016a1d2b0e49c53f0fd59acb3b6e36df13f8cb5ef7396bdea77aed7197ed4864
-EBUILD mpdcron-9999.ebuild 1750 RMD160 7da177c83ebc8a7d14362f2bc95b41b937519ca2 SHA1 529f1972f0129df1e98f675c96f4983eb72990a9 SHA256 68ceb8d153d5cb15cc0f136dc4256151637c690bb013022477f78f55bd10ff28
-MISC ChangeLog 1075 RMD160 45c91ea7fa1bf322834655ea78264274811b2560 SHA1 453a04e3d6b07e42a96dc32dc8672b07b1a4ef7e SHA256 f9a42cf06733bdcc1dcc057546a56431e8223ffe5e4ac15639960f9afe3fe0a9
-MISC metadata.xml 879 RMD160 02b2ca3ec2c8a1f291599d658bcf6e69251d86f0 SHA1 45fb598a57cfe687680d2fd075df2f2a17579c8c SHA256 61c4e72061da24f9b53d6d9a431a02cb979154d0fba3f15d3fba2aa1f2286703
+EBUILD mpdcron-0.3.ebuild 1742 RMD160 479306f03fc7ca918132dd881d004eb677cf51ab SHA1 ed8cae14b89d57023c1b43d7c5ea10cbf5774143 SHA256 0152b5a294a02a00681cd6cccd9edf48db8c5a15933c50da6c6d24715f6e87e8
+EBUILD mpdcron-9999.ebuild 1751 RMD160 4084c951863a747d15caa251411e89d8ae639770 SHA1 c030466167c3859a63c855d78b803b4a5f597afd SHA256 40b3c5d1e807031c9350c8250aea63081a08e4c8e83076396a9025741a53f794
+MISC ChangeLog 1240 RMD160 630bc54e5301b7d9c46b73ba38785f89c07c8956 SHA1 4d748650abb417e130677c337bbe1e37d6ad766c SHA256 e662d2d1dbc9088e039a9709719fb7725de4772b93a23df3f82078290b0eb914
+MISC metadata.xml 881 RMD160 c67fd3fe5e0e04a802895044e87334ff7f854264 SHA1 2f6cb609797b4571a17d3a09a7640126516edf8e SHA256 4279d79030d6d6493a92f3f5a76ff7cef5b327d5ac44f534c490353c56edd9c9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkxy/4kACgkQzJrj3cAXR0nopQCgq4YvcNQeDGcG3rBHyiWl4qbr
-nsMAoL6He/KmYXGeN/SULFgvicqntVVO
-=Jh4Q
+iEYEARECAAYFAkzXEfUACgkQzJrj3cAXR0kS3ACfZj7z0NbUUSY+adwuu+GRGpHu
+vIkAoJWa7r7gHrZbPI5O51EKzxNqbGUG
+=rZas
 -----END PGP SIGNATURE-----
