@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Nov 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
+  mpdcron-9999.ebuild, metadata.xml:
+  Updated URL for GitHub's recent switch to HTTPS everywhere.
+
   23 Aug 2010; James Rowe <jnrowe@gmail.com> mpdcron-9999.ebuild:
   Added missing git_src_prepare call.
 
